--- a/gallery-pack/src/main/resources/application-dev.yml
+++ b/gallery-pack/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@
 spring:
   datasource:
     drivername: com.mysql.jdbc.Driver
-    url: jdbc:mysql://10.220.110.166:3306/purace?useSSL=true&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/test2?useSSL=true&useUnicode=true&characterEncoding=utf-8
     username: root
     password: 123456
     # 使用druid数据源
